# 2048_server

./: .gitignore  CMakeLists.txt  LICENSE  README.md  lookfor.txt  pacman.asm
src/: application.cpp  application.hpp  applicationevents.hpp  applicationlayouts.cpp  applicationlayouts.hpp  csscolors.cpp  csscolors.hpp  eventhandler.hpp  gamelogic.cpp  gamelogic.hpp  gamewindow.cpp  gamewindow.hpp  logger.hpp  main.cpp  playerscore.cpp  playerscore.hpp  view
src/client/: application.cpp  application.hpp  applicationlayouts.cpp  applicationlayouts.hpp  client.cpp  client.hpp  client_events.hpp  client_layouts.cpp  client_layouts.hpp  client_network.cpp  client_network.hpp  csscolors.hpp  gamelogic.cpp  gamelogic.hpp  gamewindow.cpp  gamewindow.hpp  main.cpp
src/server/: application.cpp  application.hpp  database.cpp  database.hpp  main.cpp  postgres_abstraction.cpp  postgres_abstraction.hpp  server.cpp  server.hpp  server_network.cpp  server_network.hpp
src/shared/: packet.hpp  packet_types.hpp  player_record.cpp  player_record.hpp  playerscore.cpp  playerscore.hpp
src/utils/: logger.cpp  logger.hpp
